# Kugle-Embedded

./: .gitmodules  .project  99-stm32dfu.rules  API Protocol.docx  EraseFlashFromCommandline.sh  Kugle V1 STM32 pinout overview.xlsx  README.md  ResetDFUfromCommandline.sh  ResetFromCommandline.sh
KugleFirmware/: .cproject  .cproject_org  .mxproject  .project_org  KugleFirmware Debug.cfg  KugleFirmware Debug.launch  KugleFirmware.ioc  KugleFirmware.xml  STM32H743ZITx_FLASH.ld  stm32h7x_freertos.cfg
KugleFirmware/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
KugleFirmware/Inc/: FreeRTOSConfig.h  MainTask.h  MemoryManagement.h  Priorities.h  ProcessorInit.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_timebase_tim.h  stm32h7xx_it.h  usb_device.h  usbd_conf.h
KugleFirmware/Libraries/Application/PathFollowingController/: PathFollowingController.cpp  PathFollowingController.h
KugleFirmware/Libraries/Applications/ApplicationTemplate/: ApplicationTemplate.cpp  ApplicationTemplate.h
KugleFirmware/Libraries/Applications/AttitudeController/: AttitudeController.cpp  AttitudeController.h
KugleFirmware/Libraries/Applications/BalanceController/: BalanceController.cpp  BalanceController.h
KugleFirmware/Libraries/Applications/Communication/: Communication.cpp  Communication.h
KugleFirmware/Libraries/Applications/CurrentController/: CurrentController.cpp  CurrentController.h
KugleFirmware/Libraries/Applications/FrontPanel/: FrontPanel.cpp  FrontPanel.h
KugleFirmware/Libraries/Applications/HealthMonitor/: HealthMonitor.cpp  HealthMonitor.h
KugleFirmware/Libraries/Applications/PathFollowingController/: PathFollowingController.cpp  PathFollowingController.h
KugleFirmware/Libraries/Devices/Battery/: Battery.cpp  Battery.h
KugleFirmware/Libraries/Devices/BatteryBoard/: BatteryBoard.cpp  BatteryBoard.h
KugleFirmware/Libraries/Devices/ESCON/: ESCON.cpp  ESCON.h
KugleFirmware/Libraries/Misc/IIR/: IIR.cpp  (+2 more)
KugleFirmware/Libraries/Modules/Controllers/MPC/: CMakeLists.txt  MPC.cpp  MPC.h  Path.cpp  Path.h  Trajectory.cpp  Trajectory.h
KugleFirmware/Libraries/Modules/Controllers/MPC/codegen/: acado_common.h  acado_indices.h  acado_integrator.c  acado_qpoases3_interface.c  acado_qpoases3_interface.h  acado_solver.c  kugle_mpc_export.m
KugleFirmware/Libraries/Modules/Controllers/MPC/qpoases3/include/qpOASES_e/: Types.h
KugleFirmware/Libraries/Modules/Controllers/MPC/qpoases3/src/: Matrices.c  Utils.c
KugleFirmware/Src/: MainTask.cpp  MemoryManagement.c  MemoryManagement.cpp  ProcessorInit.c  TestBench.cpp  freertos.c  main.c  printf-stdarg.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c  usbd_conf.c
KugleFirmware/startup/: startup_stm32h743xx.s
(+190 files in other folders)
